welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:-14: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet:-13: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Poucet:1: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^